--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -66,4 +66,11 @@
 	note = {Accedido: 20/01/2019}
 }
 
+@misc{poo,
+	title = {Programaci{\'o}n Orientada a Objetos},
+	author = {Sebasti{\'a}n Moreno},
+	howpublished = {\url{http://ferestrepoca.github.io/paradigmas-de-programacion/poo/poo_teoria/index.html}},
+	note = {Accedido: 20/01/2019}
+}
+
 
