--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -73,4 +73,11 @@
 	note = {Accedido: 20/01/2019}
 }
 
+@book{framework,
+	title={?` {{Q}}u{\'e} es un framework?},
+	author={Javier Guti{\'e}rrez},
+	year={2015},
+	publisher={Universidad de Sevilla}
+}
+
 
