Se termina cap 2 y arranca el 3

--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
@@ -6,10 +6,9 @@
 
 \chapter{Introducción}
 
-
-%\begin{resumen}
-En el presente capítulo se detallarán las motivaciones que llevaron a la concepción de éste proyecto, junto a los elementos que componen el mismo exponiendo los objetivos y alcances pretendidos. Se realiza una reseña introductoria al contexto, dejando expuesta la importancia de resolución que se presenta.
-%\end{resumen}
+\begin{resumen}
+	En el presente capítulo se detallarán las motivaciones que llevaron a la concepción de éste proyecto, junto a los elementos que componen el mismo exponiendo los objetivos y alcances pretendidos. Se realiza una reseña introductoria al contexto, dejando expuesta la importancia de resolución que se presenta.
+\end{resumen}
 
 %-------------------------------------------------------------------
 \section{Motivación}
