--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte2.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte2.tex
@@ -35,9 +35,9 @@
 
 % Parte en donde se explica lo "copado" que es Learninspy
 
-\partTitle{IMachineApp}
+\partTitle{Diseño y desarrollo}
 
-\partDesc{Esta segunda parte de la tesis está dedicada a detallar todas las características de la aplicación lograda. Se describe el patrón de programación elegido para su implementación, justificando las elecciones de diseño realizadas, y las propiedades que la caracterizan como aplicación para sugerir una estructura de organización de imágenes según el grado de similitud o contexto, dando además la posibilidad de ser administradas por el usuario en caso de que así lo crea conveniente.}
+\partDesc{En esta segunda parte del documento se hará referencia a todo lo relativo al diseño y desarrollo del Web Service en función de los conceptos presentados en la parte inicial, incorporando conceptos más técnicos como ser la base de datos y los frameworks utilizados, entre otras cosas. Además, se hará lo propio en el lado cliente especificando el proceso de diseño y desarrollo de la aplicación junto con las tecnologías utilizadas y una noción de los componentes utilizados.}
 
 \partBackText{}
 
