--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -74,10 +74,24 @@
 }
 
 @book{framework,
-	title={?` {{Q}}u{\'e} es un framework?},
+	title={?`{{Q}}u{\'e} es un framework?},
 	author={Javier Guti{\'e}rrez},
 	year={2015},
 	publisher={Universidad de Sevilla}
+}
+
+@misc{sensoresSmart,
+	title = {?`{{C}}onoces todos los sensores que tiene tu tel{\'e}fono y para qu{\'e} sirven?},
+	author = {Leandro Crisol},
+	howpublished = {\url{https://bit.ly/2hFIHXm}},
+	note = {Accedido: 28/01/2019}
+}
+
+@misc{sensoresSmart2,
+	title = {12 sensores que encontrar{\'a}s en tu m{\'o}vil: c{\'o}mo funcionan y para qu{\'e} sirven},
+	author = {FM Yubal},
+	howpublished = {\url{https://www.xataka.com/basics/12-sensores-que-encontraras-tu-movil-sirven}},
+	note = {Accedido: 28/01/2019}
 }
 
 
