--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte2.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte2.tex
@@ -35,9 +35,22 @@
 
 % Parte en donde se explica lo "copado" que es Learninspy
 
-\partTitle{Diseño y desarrollo}
+\partTitle{Encuestando FCM}
 
-\partDesc{En esta segunda parte del documento se hará referencia a todo lo relativo al diseño y desarrollo del Web Service en función de los conceptos presentados en la parte inicial, incorporando conceptos más técnicos como ser la base de datos y los frameworks utilizados, entre otras cosas. Además, se hará lo propio en el lado cliente especificando el proceso de diseño y desarrollo de la aplicación junto con las tecnologías utilizadas y una noción de los componentes utilizados.}
+\partDesc{En esta segunda parte del documento se hará referencia a todo lo relativo al diseño y desarrollo del Web Service en función de los conceptos presentados en la parte inicial, incorporando conceptos más técnicos como ser la base de datos y los frameworks utilizados, entre otras cosas. Además, se hará lo propio en el lado cliente especificando el proceso de diseño y desarrollo de la aplicación junto con las tecnologías utilizadas y una noción de los componentes utilizados. Ambos sistemas componen el producto final denominado \textit{Encuestando FCM} (Figura \ref{fig:encuestandoFCM}).
+\\
+
+\begin{figure}[h!]
+	\begin{center}
+		\includegraphics[width=0.8\textwidth]%
+		{Imagenes/Bitmap/icono}
+		\caption{Ícono de la aplicación desarrollada}
+		\label{fig:encuestandoFCM}
+	\end{center}
+\end{figure}
+}
+
+
 
 \partBackText{}
 
