--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -1,63 +1,22 @@
-%-- Frameworks
-
-@article{fayad1997object,
-	title={Object-oriented application frameworks},
-	author={Fayad, Mohamed and Schmidt, Douglas C},
-	journal={Communications of the ACM},
-	volume={40},
-	number={10},
-	pages={32--38},
-	year={1997},
-	publisher={ACM}
+@misc{mysqlPopular,
+	title = {World's Most Popular Open Source Database},
+	author = {Oracle},
+	howpublished = {\url{https://www.oracle.com/mysql/}},
+	note = {Accedido: 29/01/2019}
 }
 
-
-%-- Papers
-
-@article{beynon1999rapid,
-	title={Rapid application development (RAD): an empirical review},
-	author={Beynon-Davies, Paul and Carne, Chris and Mackay, Hugh and Tudhope, Douglas},
-	journal={European Journal of Information Systems},
-	volume={8},
-	number={3},
-	pages={211--223},
-	year={1999},
-	publisher={Taylor \& Francis}
+@misc{mysqlRanking,
+	title = {DB-Engines Ranking},
+	author = {},
+	howpublished = {\url{https://db-engines.com/en/ranking}},
+	note = {Accedido: 29/01/2019}
 }
 
-@article{burns1985selecting,
-	title={Selecting the appropriate application development methodology},
-	author={Burns, Richard N and Dennis, Alan R.},
-	journal={ACM SIGMIS Database: the DATABASE for Advances in Information Systems},
-	volume={17},
-	number={1},
-	pages={19--23},
-	year={1985},
-	publisher={ACM}
+@misc{tiposDB,
+	title = {Caracter{\'i}sticas y tipos de bases de datos},
+	author = {Jorge Daniel Anguiano Morales},
+	howpublished = {\url{https://www.ibm.com/developerworks/ssa/data/library/tipos_bases_de_datos/index.html}},
+	note = {Accedido: 29/01/2019}
 }
-
-%-- Articulos
-
-@misc{mvp2017guide,
-	title = {{Essential Guide For Designing Your Android App Architecture}},
-	author = {Janishar Ali},
-	howpublished={\url{https://blog.mindorks.com/essential-guide-for-designing-your-android-app-architecture-mvp-part-1-74efaf1cda40}},
-	note = {Accedido: 02/04/2018}
-}
-
-@misc{ImageNet,
-	title = {{ImageNet}},
-	author = {{Standford Vision Lab, Standord University}},
-	howpublished = {\url{http://image-net.org/about-overview}},
-	note = {Accedido: 12/12/2017}
-}
-
-@misc{WordNet,
-	title = {{WordNet and ImageNet}},
-	author = {Marco Barning},
-	howpublished = {\url{https://www.web3.lu/wordnet-imagenet/}},
-	note = {Accedido: 13/12/2017}
-}
-
 
 
